Add employee image support and detail view
Introduces an image field to the Employee model with migration, configures media file handling in settings and URLs, and adds a detail view and template for employees. Updates the home page to link to the new detail view. Removes the old django_test project and its student app files.

--- a/django_employees/templates/home.html
+++ b/django_employees/templates/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Django Employee Directory</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -21,6 +22,7 @@
                 <th>Department</th>
                 <th>Salary</th>
                 <th>Is Active</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -33,6 +35,14 @@
                     <td>{{ e.department}}</td>
                     <td>{{ e.salary}}</td>
                     <td>{{ e.is_active}}</td>
+                    <td>
+                        <div>
+                            <a href="{% url 'employee_detail' e.id %}"><i class="fa fa-eye"></i></a>
+                            <a href=""><i class="fa fa-edit"></i></a>
+                            <a href=""><i class="fa fa-trash"></i></a>
+                            
+                        </div>
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
