Add employee creation form and view
Introduced EmployeeForm for model-based employee creation. Added add_employee view and template to allow users to add new employees via a form. Updated URLs and home page to link to the new add employee functionality.

--- a/django_employees/templates/home.html
+++ b/django_employees/templates/home.html
@@ -12,6 +12,8 @@
 <body>
 
     <h2>- Employees Record -</h2>
+    <a href="{% url 'add_employee' %}" style="float: right; margin-right: 200px;">Add Employee</a>
+    <br><br>
     <table>
         <thead>
             <tr>
