--- a/django_employees/templates/accounts/register.html
+++ b/django_employees/templates/accounts/register.html
@@ -10,17 +10,14 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-
 </head>
 <body>
 
-    <h2 class="text-center">Add Employee </h2>
-    <h2 class="text-center">Employee Records</h2>
-    <form action="{% url 'add_employee' %}" method="POST" enctype="multipart/form-data" class="w-50" style="margin: auto;">
+    <h2 class="text-center">Register Employee </h2>
+    <form action="{% url 'register' %}" method="POST" style="text-align: left; width: 500px; margin: auto;">
         {% csrf_token %}
-        {{ form | crispy }}      
-        <button type="submit">Submit</button>
+        {{ form | crispy }}
+        <button type="submit">Register</button>
     </form>
-
 </body>
 </html>
