--- a/django_employees/templates/home.html
+++ b/django_employees/templates/home.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-
+    <a href="{% url 'login' %}">Login</a>&emsp;
+    <a href="{% url 'register' %}">Register</a>
+    
     <h2>- Employees Record -</h2>
     <a href="{% url 'add_employee' %}" style="float: right; margin-right: 200px;">Add Employee</a>
     <br><br>
